# Telemetry_RX

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  lcd_jr.c  lcd_jr.h  main.c
main/mqtt/: mqtt.c
main/wifi/: wifi.h
